# minimum_CMake_tutorial

./: CMakeLists.txt  README.md  test.cpp  test_lib.h
